# MyAdventOfCode

./: .pre-commit-config.yaml  pyproject.toml
aoc2024/: day01.py  day02.py  day03.py  day04.py
aoc2024/tests/: test_day03.py  test_day04.py
